<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_firstname"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_lastname"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/streetnr">

            <EditText
                android:id="@+id/edit_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:hint="@string/text_street"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/streetnr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">

            <EditText
                android:id="@+id/edit_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="3"
                android:hint="@string/text_streetnumber"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/postcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_postcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:ems="@integer/ems_plz"
                android:hint="@string/text_postcode"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/postcode">

            <EditText
                android:id="@+id/edit_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:hint="@string/text_city"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_country"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>