<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0">

                <EditText
                    android:id="@+id/source_postcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="@integer/ems_plz"
                    android:hint="@string/text_postcode"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal">

                <EditText
                    android:id="@+id/source_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_source_city"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/location"
                android:layout_column="2"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:padding="3dp"
                android:src="@android:drawable/ic_menu_mylocation" />

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/destination_postcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="@integer/ems_plz"
                    android:hint="@string/text_postcode"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/destination_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_destination_city"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <SeekBar
            android:id="@+id/radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="50"
            android:paddingTop="15dp"
            android:progress="10" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="2dp"
                android:text="@string/text_radius" />

            <TextView
                android:id="@+id/radius_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15 km" />

        </LinearLayout>

        <org.goods2go.android.ui.view.DialogEditText
            android:id="@+id/pickup_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/text_pickup_from" />

        <org.goods2go.android.ui.view.DialogEditText
            android:id="@+id/deliver_until"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_line_spacing"
            app:hint="@string/text_deliver_until" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/text_until_size" />

        <org.goods2go.android.ui.view.SizePickerView
            android:id="@+id/sizepicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                app:srcCompat="@drawable/divider" />

            <Button
                android:id="@+id/button_subscribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:text="@string/text_subscribe" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>